# pilotea

./: .env  LICENSE  README.md  pyproject.toml  setup.sh
src/pilotea/: api.py  main.py  orchestrator.py
src/pilotea.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pilotea/agents/: base.py  housing.py
src/pilotea/schemas/: housing.py
src/pilotea/static/: index.html
src/pilotea/static/css/: style.css
src/pilotea/static/js/: app.js
src/pilotea/tools/: search.py
